--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ databases==0.4.1
 fastapi==0.63.0
 gunicorn==20.0.4
 h11==0.12.0
+httptools==0.1.1
 idna==2.10
 pydantic==1.7.3
 requests==2.25.1
@@ -15,3 +16,4 @@ typing==3.7.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 uvicorn==0.13.3
+uvloop==0.15.0
